test/classes/ferguson/issue-19474-duplicate-fields.good
issue-19474-duplicate-fields.chpl:6: error: field 'x' has same name as parent class field
issue-19474-duplicate-fields.chpl:2: note: parent class field declared here
