test/classes/ferguson/issue-19474-duplicate-fields.chpl
class Parent {
  var x: real;
}

class Child : Parent {
  var x: int;
}

var c = new Child();
writeln(c);
